<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:layout_margin="@dimen/element_padding_small"
              android:padding="@dimen/element_padding"
              android:background="@drawable/ic_dialog_bg"
        >

    <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_text_string"
            android:textAppearance="?android:textAppearance"
            android:textStyle="bold"
            android:textColor="@color/text_black"
            android:textAllCaps="true"
            android:gravity="center"
            android:padding="@dimen/element_padding"
            />

    <TextView
            android:id="@+id/n0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="@dimen/element_padding"

            android:textColor="@color/text_black"
            android:text="@string/ui_update_string"
            />

    <EditText
            android:id="@+id/loop_number"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:singleLine="true"
            android:textAppearance="?android:textAppearance"
            android:textColor="@color/text_black"
            android:hint="@string/type_loop_number_string"
            android:background="@drawable/ic_edit_background"
            android:padding="@dimen/element_padding"
            android:inputType="number"
            />

    <TextView
            android:id="@+id/submit"
            android:clickable="true"
            android:layout_width="fill_parent"
            android:text="@string/default_text_string"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:textColor="@color/text_black"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearance"

            android:background="@drawable/all_image_button_press"
            android:layout_margin="@dimen/element_padding"
            android:padding="@dimen/element_padding_large"
            />
</LinearLayout>

